AC_INIT([memcached-utils], [0.1], [kaigai@ak.jp.nec.com])
AC_CONFIG_SRCDIR([mcdbench.c])
AC_PREFIX_DEFAULT(/usr/local/memcached)

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
AC_CHECK_LIB([pthread], [pthread_create],,
             [AC_MSG_ERROR(-lpthread is not available)])
AC_CHECK_LIB([memcached], [memcached_create],,
             [AC_MSG_ERROR(-lmemcached is not available)])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_INT8_T
AC_TYPE_SIZE_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_UINT8_T

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
