#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT([memcached-selinux], [0.1], [kaigai@ak.jp.nec.com])
AC_CONFIG_SRCDIR([mcache.c])
AC_PREFIX_DEFAULT(/usr/local/memcached)

# Checks for programs.
AC_PROG_CC

# Checks for header files.
AC_CHECK_HEADERS([memcached/engine.h],,
                 [AC_MSG_ERROR(memcached/engine.h is not available)])
# Checks for libraries.
AC_CHECK_LIB([pthread], [pthread_create],,
             [AC_MSG_ERROR(-lpthread is not available)])
AC_CHECK_LIB([audit], [audit_open],,
             [AC_MSG_ERROR(-laudit is not available)])
AC_CHECK_LIB([selinux], [getpeercon_raw],,
             [AC_MSG_ERROR(-lselinux is not available)])
AC_CHECK_LIB([memcached], [memcached_create],,
             [AC_MSG_ERROR(-lmemcached is not available)])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_INT8_T
AC_TYPE_SIZE_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_UINT8_T

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
